--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vue-template-compiler": "^2.7.15"
     },
     "dependencies": {
+        "browser-sync": "^2.29.3",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "tailwindcss": "^3.3.5"
     }
 }
